# CV_Demo

./: CMakeLists.txt
src/: cvpro.ui  main.cpp
